tests/errors/compiler/no_comma_in_act_params_stanfunc/no_comma_in_strcpy.c
void main()
{
	char a[] = "qwer";
	char b[10];

	strcpy(&a b);
}
